--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 #on: [push]
 
 # 在master分支发生push事件时触发。
-on: 
+on:
   push:
     branches:
       - master
@@ -14,7 +14,7 @@ jobs: # 工作流
 
     strategy:
       matrix:
-        node-version: [10.x]
+        node-version: [12.16.1]
 
     steps: # 步骤
       - name: Checkout # 步骤1
@@ -28,7 +28,6 @@ jobs: # 工作流
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
           CODING_TOKEN: ${{ secrets.CODING_TOKEN }}
         run: npm install && npm run deploy
-
       # - name: Build and Deploy # 步骤3 （只提交到github可以使用这个步骤）
       #   uses: JamesIves/github-pages-deploy-action@master # 作用：将项目构建和部署到github。 https://github.com/JamesIves/github-pages-deploy-action
       #   env: # 设置环境变量
